--- a/estilo.css
+++ b/estilo.css
@@ -66,7 +66,7 @@ aside {
 
 /*Cada quadradinho*/
 .div_quadrado {
-    background-color: green;
+    /*background-color: green;
     width: 2rem;
     border-radius: 1rem;
     text-align: center;
