--- a/estilo.css
+++ b/estilo.css
@@ -8,11 +8,12 @@
 
 
 body {
-    /*background-color: #ccc;*/
+    background-color: #ccc;
     display: flex;
     flex-direction: column;
     /*altura mín do elemento deve ser 100% da altura da janela de visualização*/
     min-height: 100vh;
+    
 
 }
 
@@ -34,7 +35,15 @@ main {
     display: flex;
     /*permite aumentar a larg dos elementos dentro do conteiner completando o espaço disponível do eixo principal*/
     flex-grow: 1;
+    justify-content: center;
 
+    
+
+}
+
+p {
+    color: white;
+    margin: 1rem;
 }
 
 /*Container com todos os quadradinhos*/
@@ -42,17 +51,43 @@ container {
     background-color: green;
     border-radius: 1rem;
     display: flex;
-    /*flex-wrap: wrap;*/
+    flex-wrap: wrap;
     justify-content: space-around;
     /*esticar por todo o eixo transversal*/
     align-items: stretch;
     margin: 0.62rem;
     padding: 1rem;
-    width: 80%;
+    width: calc(100% - 12.5rem);
     
-
+   
 
 }
+
+article {
+    display: flex;
+    /*flex-direction: column;*/
+    gap: 0.31rem;
+
+}
+
+/*Cada conjunto de quadrados*/
+.div_quadrado {
+    /*TERMINAR ESSA PARTE NÃO ESTOU ACERTANDO*/
+     background-color: green;
+     width: 80%;
+     box-shadow: 0 0.5rem 0.5rem green;
+     display: flex;
+     justify-content: center;
+     text-align: center;
+     color: white;
+     padding: 1rem;
+     margin: 0.62rem;
+     
+     
+     
+ }
+
+
 
 /*Sidebar*/
 aside {
@@ -71,24 +106,6 @@ aside {
 
 }
 
-/*Cada quadradinho*/
-.div_quadrado {
-    /*background-color: green;
-    width: 2rem;
-    border-radius: 1rem;
-    text-align: center;
-
-/*TERMINAR ESSA PARTE NÃO ESTOU ACERTANDO*/
-    background-color: green;
-    width: 80%;
-    box-shadow: 0 0.5rem 0.5rem green;
-    text-align: center;
-    color: white;
-    padding: 1rem;
-    margin: 0.62rem;
-    
-    
-}
 
 
 footer {
