--- a/estilo.css
+++ b/estilo.css
@@ -3,6 +3,7 @@
     padding: 0;
     /*preenchimento e borda na largura e altura total do elemento*/
     box-sizing: border-box;
+   
 
 }
 
@@ -12,9 +13,10 @@ body {
     display: flex;
     flex-direction: column;
     /*altura mín do elemento deve ser 100% da altura da janela de visualização*/
-    min-height: 100vh;
+    /*min-height: 100vh;*/
+    margin: 5rem auto; /*pra deixar o elemento no meio do site*/
+    /*max-width: auto;*/
     
-
 }
 
 
@@ -23,11 +25,15 @@ header {
     color: white;
     border-radius: .4rem;
     padding: 1rem;
-    margin: 0.62rem;
+    /*margin: 0.62rem;*/
     text-align: center;
     /*box-shadow: 0 0.12rem 0.12rem blue;*/
     box-shadow: 0 0.5rem 0.5rem blue;
     /*width: calc(60% - 12.5rem);*/
+    margin-bottom: 0.62rem;
+    margin-left: 24rem;
+    margin-right: 24rem;
+
 
 }
 
@@ -37,8 +43,7 @@ main {
     /*permite aumentar a larg dos elementos dentro do conteiner completando o espaço disponível do eixo principal*/
     flex-grow: 1;
     justify-content: center;
-
-    
+  
 
 }
 
@@ -48,7 +53,6 @@ main {
     border-radius: 0.4rem;
     padding: 1rem;
     margin: 0.62rem;
-
 
 }
 
@@ -98,14 +102,13 @@ article {
      
  }
 
- 
+ /*Útimo quadrado da main pra ficar invisível*/
 .div_invisível {
     /*Mantem o espaço do item mas não mostra no html*/
     /*elemento é renderizado e seu espaço reservado mas o seu conteúdo não é exibido*/
     visibility:hidden;
     
  }
-
 
 
 /*Sidebar*/
@@ -120,9 +123,7 @@ aside {
     /*justify-content: flex-end;*/
     /*flex-direction: right;*/
     box-shadow: 0 0.5rem 0.5rem red;
-    height: 45vh;
-
-
+    box-sizing: border-box;
 
 }
 
@@ -133,14 +134,34 @@ footer {
     color: white;
     border-radius: 0.4rem;
     padding: 1rem;
-    margin: 0.62rem;
+    /*margin: 0.62rem;*/
     text-align: center;
     /*box-shadow: 0 0.12rem 0.12rem blue;*/
     box-shadow: 0 0.5rem 0.5rem blue;
+    margin-top: 0.62rem;
+    margin-left: 24rem;
+    margin-right: 24rem;
 
 
     
 }
+
+ /*RESPONSIVIDADE CELULAR*/
+
+ @media screen and (max-width: 1115px) {
+
+    header, footer {
+       margin: 0.62rem;
+       
+    }
+
+    .container {
+        margin: 0.62rem;
+        max-width: auto;
+
+    }
+
+ }
 
   
 
