--- a/estilo.css
+++ b/estilo.css
@@ -149,7 +149,7 @@ footer {
 
 
 
- /*RESPONSIVIDADE CELULAR*/
+ /*RESPONSIVIDADE*/
 
  @media screen and (max-width: 1115px) {
 
@@ -173,13 +173,50 @@ footer {
     }
 
    
-
-
       
 
  }
 
   
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
